check site status for reddit and arxiv

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 тесты написать
 авторизовываться над в разных потоках для каждого сайта, блокирующая функция которая будет 
 авторизовывываться сначала во все не пойдет
+выяснить где там файл с линками на сайты провайдеров и если нет то создать и подключать такие ссылки
