done with check site status

--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,7 @@
 авторизовываться над в разных потоках для каждого сайта, блокирующая функция которая будет 
 авторизовывываться сначала во все не пойдет
 выяснить где там файл с линками на сайты провайдеров и если нет то создать и подключать такие ссылки
+конфиг файл на включение отключение включение разных частей кода сайтов, 
+конфиг на подробые принты
+в хешмап с линками стоит ли засовывать переменую линка сайта?
+чекать каждую ссылку на статус мало ли переименуют еще
