почистил проект и разложил по папкам

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,5 @@
 конфиг на подробые принты
 в хешмап с линками стоит ли засовывать переменую линка сайта?
 чекать каждую ссылку на статус мало ли переименуют еще
+подгружать инфу для авторизации из файла
+записывать результат фетчинга в файл и проверять нет ли там таких постов
