--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@
 чекать каждую ссылку на статус мало ли переименуют еще
 подгружать инфу для авторизации из файла
 записывать результат фетчинга в файл и проверять нет ли там таких постов
+мапер который будет приравнивать все классы сайтов к одному формату
