add to arxiv ENABLE PRINTS CONST

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,8 @@
 подгружать инфу для авторизации из файла
 записывать результат фетчинга в файл и проверять нет ли там таких постов
 мапер который будет приравнивать все классы сайтов к одному формату
+remove eprints and put print_error_red instead
+---------
+// расписать случай если не найдет посты
+                match dots_unfiltered_str.find("</item>") {
+---------
