--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,5 @@
 заоверрайдить принты под цвет
-написать пингеры.фетчи перед тем как фетчить всю инфу
-тесты написать
-конфиг файл на включение отключение включение разных частей кода сайтов, 
-конфиг на подробые принты
+тесты написать 
 в хешмап с линками стоит ли засовывать переменую линка сайта?
 чекать каждую ссылку на статус мало ли переименуют еще
 подгружать инфу для авторизации из файла
@@ -31,3 +28,19 @@ make parallel parsing
 "editor.formatOnSave": true, in settings.json :slight_smile: or per language: "[rust]": { "editor.formatOnSave": true, },
 -------
 делать хеш от поста и отправлять хеши постов с клиента на сервер чтобы сервер видел отправлял ли уже эти посты или нет
+--------------
+если спарсилось неудочно и возникла ошибка вместо того чтобы убивать тред просто выкинуть эррор(записать его куда нидь) и 
+перейти на следующую итерацию
+----------------------
+проблема еще в том что он дожидается фетча ввсех ссылок. не над так
+----------------------
+Xml::CharacterNode(ref msg) => {}
+                                            Xml::CDATANode(ref msg) => {
+                                                println!("3");
+                                            }
+                                            Xml::CommentNode(ref msg) => {
+                                                println!("2");
+                                            }
+                                            Xml::PINode(ref msg) => {
+                                                println!("1");
+                                            }
