--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,8 @@ make parallel parsing
 ----------------------
 проблема еще в том что он дожидается фетча ввсех ссылок. не над так
 ----------------------
+you need to ensure that the Arc has exactly one strong reference and the Mutex is not poisoned
+-------
 Xml::CharacterNode(ref msg) => {}
                                             Xml::CDATANode(ref msg) => {
                                                 println!("3");
