костыль нерабочее решение ловли состояния топиков

--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,10 @@ make parallel parsing
 ----------------------
 проблема еще в том что он дожидается фетча ввсех ссылок. не над так
 ----------------------
+добавить возможность писать принты\ошибки в файл
+----------
+организация перезапуска фетча ссылок только для тех которые вернули эррор
+----------
 you need to ensure that the Arc has exactly one strong reference and the Mutex is not poisoned
 -------
 Rc<RefCell<Vec<T>>>
