--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,8 @@ make parallel parsing
 если спарсилось неудочно и возникла ошибка вместо того чтобы убивать тред просто выкинуть эррор(записать его куда нидь) и 
 перейти на следующую итерацию
 ----------------------
+в reach_provider вместо полного запроса на тело изменить ток на запрос статуса типо пинга
+-----------
 проблема еще в том что он дожидается фетча ввсех ссылок. не над так
 ----------------------
 добавить возможность писать принты\ошибки в файл
