--- a/todo.txt
+++ b/todo.txt
@@ -35,6 +35,8 @@ make parallel parsing
 перейти на следующую итерацию
 ----------------------
 в reach_provider вместо полного запроса на тело изменить ток на запрос статуса типо пинга
+---------
+запихнуть в enum тест\статус код
 -----------
 проблема еще в том что он дожидается фетча ввсех ссылок. не над так
 ----------------------
