--- a/todo.txt
+++ b/todo.txt
@@ -54,6 +54,10 @@ Rc<RefCell<Vec<T>>>
 ---------
 приравнять структуры парсинга
 -------
+ error custom: missing field `date`
+------
+проблема с основной ссылкой архива
+------
 BiorxivPostStruct и page
 -------
  // `iter()` for vecs yields `&i32`.
