red color for all errors for now stiill not in one function

--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,12 @@
 заоверрайдить принты под цвет
 тесты написать 
 в хешмап с линками стоит ли засовывать переменую линка сайта?//пришлось из за мува обьекта в расте
-чекать каждую ссылку на статус мало ли переименуют еще//только на статус без тела
+чекать каждую ссылку на статус мало ли переименуют еще
+только на статус без тела//DONE
 подгружать инфу для авторизации из файла
 записывать результат фетчинга в файл и проверять нет ли там таких постов
 мапер который будет приравнивать все классы сайтов к одному формату
-remove eprints and put print_error_red instead
+remove eprints and put print_error_red instead //проблема с Box<dyn errorr any send ></dyn>
 ---------
 // расписать случай если не найдет посты
                 match dots_unfiltered_str.find("</item>") {
