--- a/todo.txt
+++ b/todo.txt
@@ -66,3 +66,4 @@ let slice: &[u8] = &b;
                 let mut dots_unfiltered_str = converted_str.to_string();
                 dots_unfiltered_str.remove(0); //ОЧЕНЬ ВАЖНАЯ СТРОЧКА. НУЖНО УДАЛИТЬ ПЕРВУЮ ЧАСТЬ ЧТОБЫ ФАЙЛ ПРАВИЛЬНО СЧИТАЛСЯ
 -----------------------------------------
+ lazy_static! - глобальная переменная
