--- a/todo.txt
+++ b/todo.txt
@@ -79,4 +79,9 @@ fn main() {
 }
 --------------------
 2 302 кода чего ????
---------------------- поменять статус коды на обертки реквеста
+---------------------
+заменить цикл for на итераторы?
+-----------------------
+удалять содержание папок логов с включением выключением конфига
+-----------
+принты щас не оч корректные на счет цвета
