возможность удаления директории логов для каждого архива в начале

--- a/todo.txt
+++ b/todo.txt
@@ -85,3 +85,5 @@ fn main() {
 удалять содержание папок логов с включением выключением конфига
 -----------
 принты щас не оч корректные на счет цвета
+---------------
+ reqwest::StatusCode::REQUEST_TIMEOUT рефетч сделать
