подробнее расписал ошибки

--- a/todo.txt
+++ b/todo.txt
@@ -81,9 +81,9 @@ fn main() {
 2 302 кода чего ????
 ---------------------
 заменить цикл for на итераторы?
------------------------
-удалять содержание папок логов с включением выключением конфига
 -----------
 принты щас не оч корректные на счет цвета
 ---------------
  reqwest::StatusCode::REQUEST_TIMEOUT рефетч сделать
+ -------------
+ подобрать функцию которая из стринги делает сейвовый путь заменяя символы
