some todo thoughts

--- a/todo.txt
+++ b/todo.txt
@@ -87,3 +87,8 @@ fn main() {
  reqwest::StatusCode::REQUEST_TIMEOUT рефетч сделать
  -------------
  подобрать функцию которая из стринги делает сейвовый путь заменяя символы
+ -------------
+ избавиться от всех русскоязычных комментариев
+ -------------
+ split().map()
+ вместо find(<item></item>)
