twitter preparation(but not working yet)

--- a/todo.txt
+++ b/todo.txt
@@ -94,3 +94,5 @@ fn main() {
  вместо find(<item></item>)
  -------------
  if size of working dir > 100mb then remove all containg
+ -----------------
+ must be not only 1 str but many - twitter and many nitters
