todo переписать места в которых мб есть переполнение буфера

--- a/todo.txt
+++ b/todo.txt
@@ -104,3 +104,6 @@ fn main() {
  if let ProviderKind::Twitter = provider_kind {
         while fetch_result_string.contains("<dc:creator>") 
         put something like that after this match fetch_result_string.find("</item>") {
+---------------------
+https://doc.rust-lang.org/std/primitive.i32.html#method.checked_add
+переписать места в которых мб есть переполнение буфера
