--- a/todo.txt
+++ b/todo.txt
@@ -109,3 +109,5 @@ https://doc.rust-lang.org/std/primitive.i32.html#method.checked_add
 переписать места в которых мб есть переполнение буфера
 ---------------------
 add everywhere explicit types
+--------------------
+error had .description method 0_o
