--- a/todo.txt
+++ b/todo.txt
@@ -111,3 +111,5 @@ https://doc.rust-lang.org/std/primitive.i32.html#method.checked_add
 add everywhere explicit types
 --------------------
 error had .description method 0_o
+
+std::stringify
