todo mem::size_of_val

--- a/todo.txt
+++ b/todo.txt
@@ -117,3 +117,5 @@ std::stringify
 std::str::SplitN
 --------------
 add to config time elapsed prints handle
+--------------
+println!("массив занимает {} байт", mem::size_of_val(&xs));
