--- a/todo.txt
+++ b/todo.txt
@@ -125,3 +125,9 @@ remove vec into hashmap in twitter_part cause it can be reorganized into better 
 providers statistics in files. if 3 time provider is inactive then do not fetch him next time then next two times...
 -------------
 rename urls into links or links into urls...
+------------
+rewrite all crossbeam into threads
+------------
+rewrite all huge hashmaps into 2 before some crossbeams
+------------
+hashmaps into vecs
