todo: futures in some cases instead of threads

--- a/todo.txt
+++ b/todo.txt
@@ -117,8 +117,6 @@ std::stringify
 std::str::SplitN
 --------------
 add to config time elapsed prints handle
---------------
-println!("массив занимает {} байт", mem::size_of_val(&xs));
 -------------
 remove vec into hashmap in twitter_part cause it can be reorganized into better structure
 -------------
@@ -143,3 +141,4 @@ Only confirmed followers have access to @_KudoHiroyuki's tweets.
 
 429 Too Many Requests
 -----------
+futures in some cases instead of threads
