todo: remove or add 'static

--- a/todo.txt
+++ b/todo.txt
@@ -150,3 +150,5 @@ pub async fn check_new_posts_threads_parts() {
     let mut threads_vec = Vec::with_capacity(4); arxiv biorxiv medrxiv twitter reddit ...
 -----------
 &str instead of String everywhere if possible
+-----------
+'static remove if possible or maybe add if its better 
