--- a/todo.txt
+++ b/todo.txt
@@ -143,7 +143,7 @@ Only confirmed followers have access to @_KudoHiroyuki's tweets.
 -----------
 futures in some cases instead of threads
 -----------
-threads batch
+thread pool
 -----------
 do something with that 
 pub async fn check_new_posts_threads_parts() {
