--- a/todo.txt
+++ b/todo.txt
@@ -154,3 +154,5 @@ pub async fn check_new_posts_threads_parts() {
 'static remove if possible or maybe add if its better 
 -----------
 ensure! macros
+----------
+let _ = join_all(vec_of_write_into_files_futures).await; //todo: add state of success/unsuccess
