--- a/todo.txt
+++ b/todo.txt
@@ -156,3 +156,7 @@ pub async fn check_new_posts_threads_parts() {
 ensure! macros
 ----------
 let _ = join_all(vec_of_write_into_files_futures).await; //todo: add state of success/unsuccess
+-----------
+if let Ok(something) = something.lock() {}
+instead of 
+something.lock().unwrap();
