there is a habr rss!

--- a/todo.txt
+++ b/todo.txt
@@ -162,3 +162,6 @@ something.lock().unwrap();
 RES.STATUS: 521 <unknown status code>
 ----------
 operation timed out print time elapsed
+----------
+habr rss 
+https://habr.com/ru/rss/post/553356/?with_hubs=true:?with_tags=true:?limit=100
