github newsfeed exists

--- a/todo.txt
+++ b/todo.txt
@@ -165,3 +165,5 @@ operation timed out print time elapsed
 ----------
 habr rss 
 https://habr.com/ru/rss/post/553356/?with_hubs=true:?with_tags=true:?limit=100
+----------
+github newsfeed
