todo: config as toml file

--- a/todo.txt
+++ b/todo.txt
@@ -168,5 +168,7 @@ https://habr.com/ru/rss/post/553356/?with_hubs=true:?with_tags=true:?limit=100
 https://habr.com/ru/rss/all/all/?fl=ru?with_hubs=true:?with_tags=true:
 ----------
 github newsfeed
+----------
+config as toml file
 
  
