todo: redo fetch link cuz method not allowed error error

--- a/todo.txt
+++ b/todo.txt
@@ -170,5 +170,7 @@ https://habr.com/ru/rss/all/all/?fl=ru?with_hubs=true:?with_tags=true:
 github newsfeed
 ----------
 config as toml file
+----------
+redo fetch link cuz method not allowed error error
 
  
