todo: db for provider links

--- a/todo.txt
+++ b/todo.txt
@@ -182,3 +182,5 @@ implement that with config params
 ------------------
 Rc<RefCell<Data>>
 Rc::new(<RefCell::new(Data { value: 42}))
+------------------
+db for provider links
