--- a/todo.txt
+++ b/todo.txt
@@ -156,6 +156,9 @@ move this code into upper tree positions - no need no waiting for writing files
 --------------------
 write logs into file in different service
 --------------------
-maybe cast struct into common rss with option type with fields for all providers
+maybe cast struct into common rss with option type with fields for all providers//bad idea
 --------------------
 twitter bug
+--------------------
+let unhandled_success_handled_success_are_there_items_initialized_posts_dir =
+        "unhandled_success_handled_success_are_there_items_initialized_posts"; //move to config
