generate_biorxiv_hashmap_links and others rename this - remove hashmap

--- a/todo.txt
+++ b/todo.txt
@@ -164,3 +164,5 @@ create big xml/json file to test parsing speed
 ----------------------------
 add write logs into dir if provider doesnt respond to request 
 there is no point for that before adding database
+-------------------------------
+generate_biorxiv_hashmap_links and others rename this - remove hashmap
