todo: parse github content which in html

--- a/todo.txt
+++ b/todo.txt
@@ -166,3 +166,5 @@ add write logs into dir if provider doesnt respond to request
 there is no point for that before adding database
 -------------------------------
 generate_biorxiv_hashmap_links and others rename this - remove hashmap
+-------------------------------
+rss_struct.entries[count].content.clone(), //todo: content is html now, need parsing
