todo: [dependencies] and [dev-dependencies]

--- a/todo.txt
+++ b/todo.txt
@@ -181,3 +181,5 @@ its solution for github actions test running command
 write some logic and flag what choose between config values and in code constants for more efficient production variant 
 --------------------
 google some style guide variable naming for project(parsing espesially) and rename variables
+--------------------
+[dependencies] and [dev-dependencies] 
